ghc-4335c07/testsuite/tests/patsyn/should_compile/T8966.hs
{-# LANGUAGE PolyKinds, KindSignatures, PatternSynonyms, DataKinds, GADTs  #-}

module T8966 where

data NQ :: [k] -> * where
   D :: NQ '[a]

pattern Q = D
